--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,7 @@
                 <h2>Weather App</h2>
             </div>
         </header>
+        <main></main>
+        <footer></footer>
     </body>
 </html>
