--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
         <title>Weather App</title>
     </head>
     <body>
@@ -15,7 +16,7 @@
                     viewBox="0 0 24 24"
                 >
                     <path
-                        fill="currentColor"
+                        fill="#f9fafb"
                         d="M21.86 12.5A4.313 4.313 0 0 0 19 11c0-1.95-.68-3.6-2.04-4.96C15.6 4.68 13.95 4 12 4c-1.58 0-3 .47-4.25 1.43s-2.08 2.19-2.5 3.72c-1.25.28-2.29.93-3.08 1.95S1 13.28 1 14.58c0 1.51.54 2.8 1.61 3.85C3.69 19.5 5 20 6.5 20h12c1.25 0 2.31-.44 3.19-1.31c.87-.88 1.31-1.94 1.31-3.19c0-1.15-.38-2.15-1.14-3M16.57 18L14 15.43c-.57.36-1.26.57-2 .57c-2.21 0-4-1.79-4-4s1.79-4 4-4s4 1.79 4 4c0 .74-.21 1.43-.57 2L18 16.57zM14 12c0 1.11-.89 2-2 2s-2-.89-2-2s.9-2 2-2s2 .9 2 2"
                     />
                 </svg>
@@ -24,7 +25,101 @@
                 <h2>Weather App</h2>
             </div>
         </header>
-        <main></main>
+        <main>
+            <div class="container">
+                <form id="myForm">
+                    <div class="form-control">
+                        <label for="search">
+                            <input
+                                type="search"
+                                id="search"
+                                name="search"
+                                placeholder="Enter your location here ..."
+                            />
+                        </label>
+                    </div>
+                    <button class="btn-submit">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                        >
+                            <path
+                                fill="currentColor"
+                                d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5l-1.5 1.5l-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16A6.5 6.5 0 0 1 3 9.5A6.5 6.5 0 0 1 9.5 3m0 2C7 5 5 7 5 9.5S7 14 9.5 14S14 12 14 9.5S12 5 9.5 5"
+                            />
+                        </svg>
+                    </button>
+                </form>
+            </div>
+            <div class="content">
+                <div class="error">Location not found!</div>
+                <div id="spinner" class="loader" hidden>
+                    <div class="loader_inner"></div>
+                </div>
+                <div class="card">
+                    <div class="card-top">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                    <div class="card-middle">
+                        <div class="weather-icon"><img src="#" /></div>
+                        <div class="weather">
+                            <h2></h2>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="card-bottom">
+                        <div class="feels-like">
+                            <div class="icon">
+                                <iconify-icon
+                                    width="26"
+                                    height="26"
+                                    icon="solar:temperature-linear"
+                                ></iconify-icon>
+                                <h3>Feels like</h3>
+                            </div>
+                            <div class="results"></div>
+                        </div>
+                        <div class="wind">
+                            <div class="icon">
+                                <iconify-icon
+                                    width="26"
+                                    height="26"
+                                    icon="mingcute:wind-line"
+                                ></iconify-icon>
+                                <h3>Wind</h3>
+                            </div>
+                            <div class="results"></div>
+                        </div>
+                        <div class="pressure">
+                            <div class="icon">
+                                <iconify-icon
+                                    width="26"
+                                    height="26"
+                                    icon="lets-icons:pressure-light"
+                                ></iconify-icon>
+                                <h3>Pressure</h3>
+                            </div>
+                            <div class="results"></div>
+                        </div>
+                        <div class="humidity">
+                            <div class="icon">
+                                <iconify-icon
+                                    width="26"
+                                    height="26"
+                                    icon="material-symbols:humidity-percentage"
+                                ></iconify-icon>
+                                <h3>Humidity</h3>
+                            </div>
+                            <div class="results"></div>
+                        </div>
+                    </div>
+                    <button class="btn-switcher"></button>
+                </div>
+            </div>
+        </main>
         <footer>
             <p>Created by Bookkeeper33</p>
             <a href="https://github.com/Bookkeeper33" target="_blank"
